// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Another tocData 1`] = `
<div>
  <div
    class="toc_large"
  >
    <div
      class="tocWrapper"
    >
      <nav
        class="toc"
      >
        <ol
          class="tocList"
        >
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test"
              href="#test"
            >
              test
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </div>
  <div
    class="toc_small_wrapper"
  >
    <div
      class="toc_small_content"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-duqclk-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <h3
          class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
        >
          <button
            aria-controls="toc-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1c1zc9f-MuiButtonBase-root-MuiAccordionSummary-root"
            data-testid="toc-header"
            id="toc-header"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
            >
              Innholdsoversikt
            </span>
            <span
              class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#034584"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 69, 132);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </span>
          </button>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="toc-header"
                class="MuiAccordion-region css-at4ued-MuiAccordion-region"
                id="toc-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
                  data-testid="toc-content"
                >
                  <nav
                    class="toc"
                  >
                    <ol
                      class="tocList"
                    >
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test"
                          href="#test"
                        >
                          test
                        </a>
                      </li>
                    </ol>
                  </nav>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`English menu 1`] = `
<div>
  <div
    class="toc_large"
  >
    <div
      class="tocWrapper"
    >
      <nav
        class="toc"
      >
        <ol
          class="tocList"
        >
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-en"
              href="#test-en"
            >
              Test en
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-to"
              href="#test-to"
            >
              Test to
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-tre"
              href="#test-tre"
            >
              Test tre
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-fire"
              href="#test-fire"
            >
              Test fire
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </div>
  <div
    class="toc_small_wrapper"
  >
    <div
      class="toc_small_content"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-duqclk-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <h3
          class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
        >
          <button
            aria-controls="toc-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1c1zc9f-MuiButtonBase-root-MuiAccordionSummary-root"
            data-testid="toc-header"
            id="toc-header"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
            >
              Table of contents
            </span>
            <span
              class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#034584"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 69, 132);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </span>
          </button>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="toc-header"
                class="MuiAccordion-region css-at4ued-MuiAccordion-region"
                id="toc-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
                  data-testid="toc-content"
                >
                  <nav
                    class="toc"
                  >
                    <ol
                      class="tocList"
                    >
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-en"
                          href="#test-en"
                        >
                          Test en
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-to"
                          href="#test-to"
                        >
                          Test to
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-tre"
                          href="#test-tre"
                        >
                          Test tre
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-fire"
                          href="#test-fire"
                        >
                          Test fire
                        </a>
                      </li>
                    </ol>
                  </nav>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`English menu 2`] = `
<div>
  <div
    class="toc_large"
  >
    <div
      class="tocWrapper"
    >
      <nav
        class="toc"
      >
        <ol
          class="tocList"
        >
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-en"
              href="#test-en"
            >
              Test en
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-to"
              href="#test-to"
            >
              Test to
            </a>
            <ol
              class="tocList"
            >
              <li
                class="tocListItem false"
                data-testid="tocItem"
              >
                <a
                  data-testid="toc_a_#test-to_kirurgiske-inngrep-for-endometriose"
                  href="#test-to_kirurgiske-inngrep-for-endometriose"
                >
                  Kirurgiske inngrep for endometriose
                </a>
              </li>
              <li
                class="tocListItem false"
                data-testid="tocItem"
              >
                <a
                  data-testid="toc_a_#test-to_kirurgiske-inngrep-for-noe-annet"
                  href="#test-to_kirurgiske-inngrep-for-noe-annet"
                >
                  Kirurgiske inngrep for noe annet
                </a>
              </li>
            </ol>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-tre"
              href="#test-tre"
            >
              Test tre
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-fire"
              href="#test-fire"
            >
              Test fire
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </div>
  <div
    class="toc_small_wrapper"
  >
    <div
      class="toc_small_content"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-duqclk-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <h3
          class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
        >
          <button
            aria-controls="toc-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1c1zc9f-MuiButtonBase-root-MuiAccordionSummary-root"
            data-testid="toc-header"
            id="toc-header"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
            >
              Table of contents
            </span>
            <span
              class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#034584"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 69, 132);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </span>
          </button>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="toc-header"
                class="MuiAccordion-region css-at4ued-MuiAccordion-region"
                id="toc-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
                  data-testid="toc-content"
                >
                  <nav
                    class="toc"
                  >
                    <ol
                      class="tocList"
                    >
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-en"
                          href="#test-en"
                        >
                          Test en
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-to"
                          href="#test-to"
                        >
                          Test to
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-tre"
                          href="#test-tre"
                        >
                          Test tre
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-fire"
                          href="#test-fire"
                        >
                          Test fire
                        </a>
                      </li>
                    </ol>
                  </nav>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Norwegian menu 1`] = `
<div>
  <div
    class="toc_large"
  >
    <div
      class="tocWrapper"
    >
      <nav
        class="toc"
      >
        <ol
          class="tocList"
        >
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-en"
              href="#test-en"
            >
              Test en
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-to"
              href="#test-to"
            >
              Test to
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-tre"
              href="#test-tre"
            >
              Test tre
            </a>
          </li>
          <li
            class="tocListItem false"
            data-testid="tocItem"
          >
            <a
              data-testid="toc_a_#test-fire"
              href="#test-fire"
            >
              Test fire
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </div>
  <div
    class="toc_small_wrapper"
  >
    <div
      class="toc_small_content"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-duqclk-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <h3
          class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
        >
          <button
            aria-controls="toc-content"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-1c1zc9f-MuiButtonBase-root-MuiAccordionSummary-root"
            data-testid="toc-header"
            id="toc-header"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-yfrx4k-MuiAccordionSummary-content"
            >
              Innholdsoversikt
            </span>
            <span
              class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                color="#034584"
                fill="currentColor"
                font-size="large"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(3, 69, 132);"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                />
              </svg>
            </span>
          </button>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="toc-header"
                class="MuiAccordion-region css-at4ued-MuiAccordion-region"
                id="toc-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-1lj39kh-MuiAccordionDetails-root"
                  data-testid="toc-content"
                >
                  <nav
                    class="toc"
                  >
                    <ol
                      class="tocList"
                    >
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-en"
                          href="#test-en"
                        >
                          Test en
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-to"
                          href="#test-to"
                        >
                          Test to
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-tre"
                          href="#test-tre"
                        >
                          Test tre
                        </a>
                      </li>
                      <li
                        class="tocListItem false"
                        data-testid="tocItem"
                      >
                        <a
                          data-testid="toc_a_#test-fire"
                          href="#test-fire"
                        >
                          Test fire
                        </a>
                      </li>
                    </ol>
                  </nav>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
